update: choosing coupon for hotels

--- a/app/src/main/res/layout/partner_activity_coupon_list.xml
+++ b/app/src/main/res/layout/partner_activity_coupon_list.xml
@@ -29,5 +29,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:text="Button" />
+        android:text="ADD NEW COUPON" />
 </LinearLayout>
