--- a/app/src/main/res/layout/partner_custom_coupon.xml
+++ b/app/src/main/res/layout/partner_custom_coupon.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="#E5EBF3"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:id="@+id/layout">
 
     <TextView
         android:id="@+id/promotionName"
