--- a/app/src/main/res/layout/activity_room_add_hotel_step4.xml
+++ b/app/src/main/res/layout/activity_room_add_hotel_step4.xml
@@ -54,11 +54,11 @@
                 </LinearLayout>
 
                 <Button
-                    android:id="@+id/continueBtn"
+                    android:id="@+id/finishBtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
-                    android:text="Continue"
+                    android:text="Finish"
                     android:textAllCaps="false" />
 
 
