--- a/app/src/main/res/layout/partner_fragment_message.xml
+++ b/app/src/main/res/layout/partner_fragment_message.xml
@@ -6,9 +6,76 @@
     tools:context=".partner.PartnerMessageFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Message Fragment" />
+        android:layout_height="match_parent">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/layout_group_chat"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/white"
+            android:fitsSystemWindows="true"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/text_gchat_indicator"
+                android:layout_width="wrap_content"
+                android:text="1231313"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_gchat"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_above="@+id/layout_gchat_chatbox"
+            android:layout_below="@+id/layout_group_chat"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            android:paddingHorizontal="16dp"
+             />
+
+
+        <LinearLayout
+            android:id="@+id/layout_gchat_chatbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:padding="5dp">
+            <Button
+                android:id="@+id/btnAdd"
+                android:layout_width="wrap_content"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:layout_height="match_parent"
+                android:textColor="@color/black" />
+            <EditText
+                android:id="@+id/edit_gchat_message"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:background="@android:color/transparent"
+                android:hint="Enter Message"
+                android:layout_weight="1"
+                android:inputType="text"
+                android:maxLines="6"
+                tools:ignore="Autofill" />
+            <Button
+                android:id="@+id/button_gchat_send"
+                android:layout_width="wrap_content"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:layout_height="match_parent"
+                android:textColor="@color/black" />
+        </LinearLayout>
+    </RelativeLayout>
+
 
 </FrameLayout>
