--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -45,13 +45,7 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:padding="5dp">
-        <Button
-            android:id="@+id/btnAdd"
-            android:layout_width="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            android:layout_height="match_parent"
-            android:textColor="@color/black" />
+
         <EditText
             android:id="@+id/edit_gchat_message"
             android:layout_width="match_parent"
@@ -60,6 +54,7 @@
             android:hint="Enter Message"
             android:layout_weight="1"
             android:inputType="text"
+            android:layout_margin="5dp"
             android:maxLines="6"
             tools:ignore="Autofill" />
         <Button
@@ -67,6 +62,7 @@
             android:layout_width="wrap_content"
             android:minWidth="0dp"
             android:minHeight="0dp"
+            android:background="@drawable/baseline_send_24"
             android:layout_height="match_parent"
             android:textColor="@color/black" />
     </LinearLayout>
