--- a/app/src/main/res/layout/show_list_chat_adapter.xml
+++ b/app/src/main/res/layout/show_list_chat_adapter.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="10dp"
+    android:orientation="horizontal"
     >
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -17,22 +18,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
+        android:layout_centerVertical="true"
         app:srcCompat="@drawable/img_1" />
 
-    <TextView
-        android:id="@+id/nameTv"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="10dp"
-        android:drawableRight="@drawable/ic_right_arrow"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:text="Ho Tri An"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/photoImg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/photoImg"
-        app:layout_constraintTop_toTopOf="@+id/photoImg" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_toStartOf="@+id/icon"
+        android:layout_toEndOf="@+id/photoImg"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/nameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="Ho Tri An"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/messTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="Ho Tri An"
+            android:textSize="16dp" />
+    </LinearLayout>
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/ic_right_arrow"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true">
+
+    </ImageView>
+</RelativeLayout>
