--- a/app/src/main/res/layout/room_recyclerview_layout.xml
+++ b/app/src/main/res/layout/room_recyclerview_layout.xml
@@ -25,32 +25,63 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                android:id="@+id/circle_indicator_room"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:dotsCornerRadius="8dp"
+                android:layout_marginBottom="10dp"
+                app:dotsSize="5dp"
+                app:dotsSpacing="4dp"
+                app:dotsWidthFactor="2.5"
+                app:progressMode="true"
+                app:dotsColor="@color/grey"
+                app:selectedDotColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="@+id/viewPager"
+                app:layout_constraintEnd_toEndOf="@+id/viewPager"
+                app:layout_constraintStart_toStartOf="@+id/viewPager" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/roomtitleTv"
+            android:layout_weight="5"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:text="Phòng 2 giường đơn"
-            android:textColor="@color/primary"
+            android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/availableGuests"
+            android:layout_marginEnd="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5 - 8 adults"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:drawablePadding="3dp"
+            android:layout_marginStart="10dp"
+            android:drawableLeft="@drawable/ic_person_outline"
+            android:textSize="17sp"
+            android:textColor="@color/black" />
+
 
         <TextView
             android:id="@+id/bedInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:textColor="@color/black"
             android:layout_marginTop="10dp"
             android:text="3 beds (2 Sofa bed(s) / Variable size + 2 Sofa bed(s) / Variable size)"
             android:textSize="18sp"
             android:textStyle="bold" />
-
-
-
-
 
         <TextView
             android:id="@+id/descriptionTv"
@@ -67,6 +98,7 @@
             android:text="Facilities"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:textStyle="bold"
             android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             />
@@ -91,58 +123,65 @@
             android:background="?android:attr/listDivider" />
 
 
-        <TextView
-            android:id="@+id/guestInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Price for 8 guest(s)"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
         <LinearLayout
+            android:id="@+id/priceInfoLL"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:layout_marginStart="10dp"
-            >
-
-            <TextView
-                android:id="@+id/originalPriceTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/bg_strikethrough"
-                android:text="TextView"
-                android:layout_marginEnd="10dp"
-                android:textColor="@android:color/holo_red_light"/>
-
-            <TextView
-                android:id="@+id/discount_priceTv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="123"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/date_rangeTv"
-                app:layout_constraintTop_toBottomOf="@+id/date_rangeTv" />
-        </LinearLayout>
-
-
-        <TextView
-            android:id="@+id/percentage_discountTv"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="Sales 5%"
-            android:textColor="@color/white"
-            android:background="#00CC00"
-            android:layout_marginVertical="5dp"
-            android:paddingHorizontal="5dp"
-            android:textSize="18sp" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/guestInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Price for 8 guest(s)"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginStart="10dp"
+                >
+
+                <TextView
+                    android:id="@+id/originalPriceTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/bg_strikethrough"
+                    android:text="TextView"
+                    android:layout_marginEnd="10dp"
+                    android:textColor="@android:color/holo_red_light"/>
+
+                <TextView
+                    android:id="@+id/discount_priceTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="123"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="@+id/date_rangeTv"
+                    app:layout_constraintTop_toBottomOf="@+id/date_rangeTv" />
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/percentage_discountTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Sales 5%"
+                android:textColor="@color/white"
+                android:background="#00CC00"
+                android:layout_marginVertical="5dp"
+                android:paddingHorizontal="5dp"
+                android:textSize="18sp" />
+
+        </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bookingBtn"
@@ -152,7 +191,8 @@
             android:layout_marginEnd="10dp"
             app:strokeColor="@color/primary"
             android:textColor="@color/primary"
-            android:text="Select"
+            android:textAllCaps="false"
+            android:text="Book this room"
             style="?attr/materialButtonOutlinedStyle"
             />
 
