chat with realtime complete

--- a/app/src/main/res/layout/item_booking_me.xml
+++ b/app/src/main/res/layout/item_booking_me.xml
@@ -61,7 +61,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
-                            android:background="@color/teal_200"
+                            android:background="@color/lightgrey"
                             android:padding="8dp">
                             <TextView
                                 android:id="@+id/requestTv"
