--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -85,19 +85,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp">
-
-            <TextView
-                android:id="@+id/Label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:gravity="center_vertical"
-                android:text="Your profile"
-                android:textColor="@color/black"
-                android:textSize="25sp"
-                android:textStyle="normal" />
-
             <LinearLayout
                 android:id="@+id/displaynameLayout"
                 android:layout_width="match_parent"
@@ -137,140 +124,10 @@
 
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="5dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:gravity="center_vertical"
-                    android:text="Phone"
-                    android:textColor="@color/primary"
-                    android:textSize="20sp"
-                    android:textStyle="normal" />
-
-                <EditText
-                    android:id="@+id/phoneET"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:background="@null"
-                    android:gravity="center_vertical"
-                    android:inputType="phone"
-                    android:layout_marginLeft="5dp"
-                    android:text="121212"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="normal" />
-            </LinearLayout>
-        <LinearLayout
             android:id="@+id/emaillayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
-
-                <TextView
-                    android:id="@+id/textView22"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="5dp"
-                    android:text="Email:"
-                    android:textColor="@color/primary"
-                    android:textSize="20sp"
-                    android:textStyle="normal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <EditText
-                    android:id="@+id/emailET"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="5dp"
-                    android:background="@null"
-                    android:gravity="center_vertical"
-                    android:inputType="textMultiLine"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="60dp"
-                    android:text="121aaaaaaaaasssssssasssssssaaaaaaaaaaaaaaa212"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="normal"
-                    app:layout_constraintEnd_toStartOf="@+id/channgeEmailBtn"
-                    app:layout_constraintStart_toEndOf="@+id/textView22"
-                    app:layout_constraintTop_toTopOf="@+id/textView22" />
-
-                <ImageView
-                    android:id="@+id/emailVerified"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/baseline_check_circle_24"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/primary" />
-
-                <android.widget.Button
-                    android:id="@+id/channgeEmailBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:minWidth="0dp"
-                    android:background="@drawable/custom_button_booking"
-                    android:gravity="right|center_vertical"
-                    android:shadowColor="@color/white"
-                    android:text="Change"
-                    android:textColor="@color/primary"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/emailVerified"
-                    app:rippleColor="@color/white"
-                    app:strokeColor="@color/white" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:paddingVertical="5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="5dp"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="5dp"
-                    android:text="Password "
-                    android:textColor="@color/primary"
-                    android:textSize="20sp"
-                    android:textStyle="normal" />
-                <EditText
-                    android:id="@+id/editTextTextPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="**********"
-                    android:inputType="textPassword" />
-
-            </LinearLayout>
-        </LinearLayout>
+            android:orientation="vertical"/>
 
         </LinearLayout>
 
@@ -306,14 +163,18 @@
         </LinearLayout>
 
     </LinearLayout>
+
     <ProgressBar
         android:id="@+id/savedListPB"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
-        android:layout_gravity="center"
         android:layout_height="match_parent"
-        android:elevation="1dp"
-        android:layout_marginVertical="15dp" />
+        android:layout_gravity="center"
+        android:layout_marginVertical="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
