--- a/app/src/main/res/layout/partner_activity_booking_detail.xml
+++ b/app/src/main/res/layout/partner_activity_booking_detail.xml
@@ -175,7 +175,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:id="@+id/recycler">
 
             </androidx.recyclerview.widget.RecyclerView>
 
