--- a/app/src/main/res/layout/partner_booking_list_item.xml
+++ b/app/src/main/res/layout/partner_booking_list_item.xml
@@ -61,9 +61,9 @@
                 <TextView
                     android:id="@+id/bookingDate"
                     android:layout_width="match_parent"
-                    android:textSize="12sp"
                     android:layout_height="wrap_content"
-                    android:text="a day ago" />
+                    android:text="a day ago"
+                    android:textSize="12sp" />
             </LinearLayout>
 
         </LinearLayout>
