profile & update profile

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="grey">#adafb3</color>
     <color name="title_color">#FFFFFF</color>
     <color name="green">#33cc33</color>
+    <color name="red">#f54242</color>
+
 </resources>
