--- a/app/src/main/res/layout/activity_rating_hotel.xml
+++ b/app/src/main/res/layout/activity_rating_hotel.xml
@@ -59,7 +59,7 @@
                 android:layout_marginEnd="20dp"
                 android:stepSize="0.5"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/hotelName" />
+                app:layout_constraintTop_toBottomOf="@+id/hotelinfo" />
 
             <TextView
                 android:id="@+id/subtitle2"
@@ -189,12 +189,12 @@
                 android:id="@+id/hotelName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="28dp"
                 android:text="TextView"
                 android:textColor="@color/primary"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView8" />
 
