--- a/app/src/main/res/layout/fragment_sub_hotel_detail_description.xml
+++ b/app/src/main/res/layout/fragment_sub_hotel_detail_description.xml
@@ -32,6 +32,7 @@
             android:id="@+id/expand_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
             expandableTextView:maxCollapsedLines="4"
             expandableTextView:animDuration="200">
             <TextView
