--- a/app/src/main/res/layout/fragment_sub_hotel_detail_feed_back.xml
+++ b/app/src/main/res/layout/fragment_sub_hotel_detail_feed_back.xml
@@ -17,12 +17,28 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingVertical="5dp">
-        <TextView
-            android:id="@+id/cleaness"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cleanliness"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/cleaness"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cleanliness"
+                android:layout_weight="1"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/cleanlinessRate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_gravity="end"
+                android:text="3.4" />
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/cleanBar"
@@ -35,12 +51,28 @@
 
             />
 
-        <TextView
-            android:id="@+id/comfort"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Comfort"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/comfort"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Comfort"
+                android:layout_weight="1"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/comfortRate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="3.4"
+                android:textStyle="bold" />
+        </LinearLayout>
+
         <ProgressBar
             android:id="@+id/comfortBar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -51,12 +83,29 @@
             android:max="100"
 
             />
-        <TextView
-            android:id="@+id/services"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Services"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/services"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Services"
+                android:layout_weight="1"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/servicesRate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="3.4"
+                android:textStyle="bold" />
+        </LinearLayout>
+
         <ProgressBar
             android:id="@+id/servicesBar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -67,12 +116,29 @@
             android:max="100"
 
             />
-        <TextView
-            android:id="@+id/location"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Location"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Location"
+                android:layout_weight="1"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/locationRate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="3.4"
+                android:textStyle="bold" />
+        </LinearLayout>
+
         <ProgressBar
             android:id="@+id/locationBar"
             style="?android:attr/progressBarStyleHorizontal"
