--- a/app/src/main/res/layout/hotel_search_list_item.xml
+++ b/app/src/main/res/layout/hotel_search_list_item.xml
@@ -45,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="5dp"
             android:weightSum="10"
             >
             <TextView
